amazon-ec2/2.5/modules/ROOT/pages/amazon-ec2-connector-studio.adoc
= Using Anypoint Studio to Configure Amazon EC2 Connector 2.5 - Mule 4
:page-aliases: connectors::amazon/amazon-ec2-connector-studio.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-input-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.

When you run the connector, you can view the app log to check for problems, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Using Anypoint Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:amazon-ec2-connector-reference.adoc[Amazon EC2 Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Amazon EC2 Connector to your Mule project to automatically populate the XML code with the connector's namespace and schema location and add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type `amazon ec2` in the search field.
. Click *Amazon EC2 Connector* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-input-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.
You can configure one of these sources to use with Amazon EC2 Connector:

* *HTTP > Listener* +
Initiates a flow each time it receives a request on the configured host and port
* *Scheduler* +
Initiates a flow when a time-based condition is met

For example, to configure an HTTP listener, follow these steps:

. In the *Mule Palette* view, select *HTTP > Listener*.
. Drag *Listener* to the Studio canvas.
. On the *Listener* configuration screen, optionally change the value of the *Display Name* field.
. Specify a value for the *Path* field.
. Click the plus sign (*+*) next to the *Connector configuration* field to configure a global element that can be used by all instances of HTTP *Listener* in the app.
. On the *General* tab, specify connection information for the connector.
. On the *TLS* tab, optionally specify the TLS information for the connector.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you immediately define a specific operation for that connector to perform.

To add an operation for Amazon EC2 Connector, follow these steps:

. In the *Mule Palette* view, select *Amazon EC2* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, it’s best to configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials that the connector requires to access the target Amazon EC2 system. Amazon EC2 Connector supports Basic and Role authentication.

To configure the global element for Amazon EC2 Connector, follow these steps:

. Select the name of the connector in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, from *Connection*, select the authentication type:
* <<basic_authentication,*Basic Authentication*>>
* <<role-authentication,*Role Authentication*>>

+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[basic_authentication]]
=== Basic Authentication

Enter the following information on the *General* tab of the *Global Element Properties* screen to configure Basic authentication:

* *Name*
+
Name for the configuration
* *Connection*
+
Select *Basic*.
* *Session Token*
+
Session token provided by Amazon Security Token Service (STS)
* *Access Key*
+
Alphanumeric text string that uniquely identifies the user who owns the Amazon account
* *Secret Key*
+
Key provided by Amazon that serves as the password.
* *Try Default AWS Credentials Provider Chain*
+
Set to `true` to obtain credentials from the AWS environment.
* *Region Endpoint*
+
Endpoint of the service's region

The following image shows an example of configuring Basic authentication:

.Basic authentication fields
image::mule-amazon-ec2-global-config.png[To configure authentication, select *Basic* in the *Connection* field and then complete the fields on the *General* tab.]

[[role-authentication]]
=== Role Authentication

Enter the following information on the *General* tab of the global element configuration screen to configure Role authentication:

* *Name*
+
Name for the configuration.
* *Connection*
+
Select *Role*.
* *Role ARN*
+
Role to assume to gain cross-account access
* *Access Key*
+
Alphanumeric text string that uniquely identifies the user who owns the Amazon account
* *Secret Key*
+
Key provided by Amazon that serves as the password
* *Try Default AWS Credentials Provider Chain*
+
Set to `true` to obtain credentials from the AWS environment.
* *Region Endpoint*
+
Endpoint of the service's region


[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the app log output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log output is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also view the app log in the default location `MULE_HOME/logs/<app-name>.log`. You can configure the location of the log path in the app log file `log4j2.xml`.

== Next Step

After you configure a global element and connection information, configure the other fields for the connector.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:amazon-ec2-connector-reference.adoc[Amazon EC2 Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
